# nSearch

./: .gitmodules  CMakeLists.txt  FileReader.hpp  GrepHandler.hpp  README.md  command_output.txt  executeCommand.hpp  main.cpp
Include/: DefaultSettings.hpp  FilePreview.hpp  FileReader.hpp  GrepHandler.hpp  InputArea.hpp  ItemList.hpp  MainWindow.hpp  Mmap.hpp  PointerReverseIterator.hpp  ResultLine.hpp  ResultWindow.hpp  SearchInput.hpp  Settings.hpp  Signals.hpp  executeCommand.hpp
Source/: FilePreview.cpp  FileReader.cpp  GrepHandler.cpp  ItemList.cpp  ResultLine.cpp  SearchInput.cpp  Settings.cpp  Signals.cpp  executeCommand.cpp
